# fds

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/: CMakeLists.txt  Kconfig
components/algorithm/include/: algorithm.h
components/algorithm/src/: algorithm.c
components/bt/include/: bt.h
components/bt/src/: bt.c
components/gps/include/: uart_gps.h
components/gps/src/: uart_gps.c
components/imu/include/: i2c_imu.h
components/imu/src/: bmi160.c  i2c_imu.c
components/include/: i2c_imu.h  madgwickFilter.h  power_control.h  uart_gps.h
components/power/include/: power_control.h
components/power/src/: power_control.c
components/src/: i2c_imu.c  i2c_tof.c  madgwickFilter.c  power_control.c  uart_gps.c
components/tof/include/: i2c_tof.h  i2cdev.h  vl53l1x.h
components/tof/src/: i2c_drv.c  i2c_tof.c  i2cdev_esp32.c  vl53l1_api.c  vl53l1x.c
log/: 2405061419.md  blackman.md  blackman_harris.md  blackman_nuttall.md  fakefallFFT.md  flat_top.md  hann.md  nuttall.md  realfallFFT.md
main/: main.c  main.h
